# richly-printed

./: .gitignore  README.md  SCRAPE_REPORT.md  __init__.py  agent_dashboard.py  async_http.py  clean_docs.py  deps_httpx.py  env.py  fetch_rich_docs.py  fix_code_blocks.py  inline_pep723.py  layout_judge.py  layout_panes.py  live_dashboard.py  live_dashboard_coding_agents.py  live_logs.py  live_logs_ordered.py  live_metrics.py  live_tasks.py  loader_tasks.py  loader_tasks_stream.py  markdown_syntax.py  prog_bar_advanced.py  pyproject.toml  rich_basic.py  run_all_rich_demos.sh  scrape_rich_docs.py  trace_rich.py  transient_summary.py  update_frontmatter.py  verify_docs.py
.af/: ai-docs
.learnings/: L000-EXAMPLE-sandbox-fs-write-tool.md  af-learnings-index-exemplar.md  af-learnings-index.md  claude.md
docs/: INDEX.md  metadata.json  rich-columns.md  rich-console.md  rich-introduction.md  rich-layout.md  rich-live.md  rich-logging.md  rich-markdown.md  rich-panel.md  rich-progress.md  rich-syntax.md  rich-tables.md  rich-text.md  rich-traceback.md  rich-tree.md
docs-official/: 00-INDEX.md  01-introduction.md  02-console-api.md  03-styles.md  04-markup.md  05-text.md  06-highlighting.md  07-progress.md  08-tables.md  09-logging.md  10-markdown.md  11-syntax.md  12-panel.md  13-layout.md  14-live.md  15-tree.md  16-traceback.md  17-columns.md  18-prompt.md  19-pretty.md  20-protocol.md  21-colors.md
