[project]
name = "richly-printed"
version = "0.1.0"
description = "20 demos of using the Rich library for basic, dynamic and live terminal prints. Intended for quick reference for coding agents when you want more flexibility from the terminal but don't want to turn on bloat from Streamlit/React/Vite etc. Includes basic clones of the Docker compose and Astral uv sync TUIs."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alex Foster" }]
requires-python = ">=3.10"
keywords = ["rich", "terminal", "tui", "cli", "progress", "live", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/alexfosterinvisible/richly-printed"
Repository = "https://github.com/alexfosterinvisible/richly-printed"

[project.scripts]
# Example 1: Basic Rich Console Demo
basic = "rich_basic:main"
# Example 2: Markdown & Syntax Highlighting
markdown = "markdown_syntax:main"
# Example 3: PEP 723 Inline Metadata
inline = "inline_pep723:main"
# Example 4: Environment Variables
example-env = "env:main"
# Example 5: Async HTTP
async-http = "async_http:main"
# Example 6: Layout Panes
layout = "layout_panes:main"
# Example 7: LLM Judge Layout
layout-judge = "layout_judge:main"
# Example 8: Live Tasks
live-tasks = "live_tasks:main"
# Example 9A: Live Logs
live-logs = "live_logs:main"
# Example 9B: Live Logs Ordered
live-logs-ordered = "live_logs_ordered:main"
# Example 10: Live Dashboard
live-dashboard = "live_dashboard:main"
# Example 11: Live Metrics
live-metrics = "live_metrics:main"
# Example 12: Advanced Progress Bar
progress-advanced = "prog_bar_advanced:main"
# Example 13: Loader Tasks (uv sync style)
loader-tasks = "loader_tasks:main"
# Example 14: Streaming Loader Tasks
loader-tasks-stream = "loader_tasks_stream:main"
# Example 15: Rich Tracebacks
tracebacks = "trace_rich:main"
# Example 16: HTTP with Dependencies
deps = "deps_httpx:main"
# Example 17: Live Coding Agents Dashboard
coding-agents = "live_dashboard_coding_agents:main"
# Example 18: Agent Dashboard
agent-dashboard = "agent_dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

