# richly-printed - Rich library demos for terminal UIs
# 
# WHY THIS EXISTS:
# Copy-paste examples for coding agents. Ranges from basic static panels
# to advanced dynamic dashboards with transient/self-compacting output.
# Avoids Streamlit/React/Vite bloat when you just need terminal feedback.

[project]
name = "richly-printed"
version = "0.1.0"
description = "19 Rich library demos: from basic copy-paste panels to dynamic dashboards with live updates, progress bars, and transient self-compacting output. Agent-friendly reference for terminal UIs without web framework bloat."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alex Foster" }]

# Python 3.10+ for modern type hints and asyncio features
requires-python = ">=3.10"

keywords = ["rich", "terminal", "tui", "cli", "progress", "live", "dashboard", "transient"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    # Core: Rich for all terminal formatting
    "rich>=13.0.0",
    
    # Logging: Loguru for structured logs (used in basic demo)
    "loguru>=0.7.0",
    
    # HTTP: For async/sync HTTP demos (httpbin.org examples)
    "httpx>=0.27.0",    # sync + async client
    "aiohttp>=3.9.0",   # pure async (used in some demos)
]

[project.urls]
Homepage = "https://github.com/alexfosterinvisible/richly-printed"
Repository = "https://github.com/alexfosterinvisible/richly-printed"

# Entry points: `uv run <name>` or `python -m <name>`
# Organized by complexity: basic → dynamic → advanced
[project.scripts]

# --- BASIC: Static output, copy-paste friendly ---
basic = "rich_basic:main"                    # 1. Panel + console.print
markdown = "markdown_syntax:main"            # 2. Markdown + syntax highlighting
inline = "inline_pep723:main"                # 3. PEP 723 inline deps demo
example-env = "env:main"                     # 4. Environment variables table
deps = "deps_httpx:main"                     # 16. HTTP request + table

# --- DYNAMIC: Live updates, progress bars ---
async-http = "async_http:main"               # 5. Async HTTP with spinners
layout = "layout_panes:main"                 # 6. Split-screen regions
layout-judge = "layout_judge:main"           # 7. Multi-panel LLM judge
live-tasks = "live_tasks:main"               # 8. Multi-stage task spinners
live-logs = "live_logs:main"                 # 9A. Streaming log aggregation
live-logs-ordered = "live_logs_ordered:main" # 9B. Out-of-order → sequential
live-dashboard = "live_dashboard:main"       # 10. Two-column job queue
live-metrics = "live_metrics:main"           # 11. RPS/errors/latency panels
progress-advanced = "prog_bar_advanced:main" # 12. ETA + transfer speed

# --- ADVANCED: Production-style dashboards ---
loader-tasks = "loader_tasks:main"           # 13. uv sync style (multi-stage)
loader-tasks-stream = "loader_tasks_stream:main"  # 14. Irregular spawn + auto-remove
tracebacks = "trace_rich:main"               # 15. Rich tracebacks with locals
coding-agents = "live_dashboard_coding_agents:main"  # 17. Pipeline simulation
agent-dashboard = "agent_dashboard:main"     # 18. Full monitoring dashboard

# --- TRANSIENT: Self-compacting output ---
transient-summary = "transient_summary:main" # 19. Live panel → summary replacement

[build-system]
# Hatchling: Modern, fast build backend
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include all .py files in root (flat structure, no src/ subdir)
packages = ["."]

[tool.ruff]
# Line length: 120 for readability in terminal demos
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Basic checks: errors, formatting, imports, warnings
select = ["E", "F", "I", "W"]
# E501: Line too long - demos sometimes have long strings for readability
ignore = ["E501"]
